Update mission image width to max-width for responsiveness and overflow prevention

--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,14 @@ body {
     opacity: 0.7;    
 }
 
-.text-center {
-    text-align: center;
-}
-
 /* Utility styles */
 
 .background-color {
     background: #000;
+}
+
+.text-center {
+    text-align: center;
 }
 
 /* Header Styles */
@@ -73,7 +73,7 @@ a:hover {
 
 .mission-img {
     background: url('img/img-mission-background.jpg') no-repeat center/cover;
-    width: 1200px;
+    max-width: 100%;
     height: 700px;
     display: flex;
     flex-direction: column;
@@ -138,7 +138,7 @@ h4 {
     align-items: center;
     margin: 100px auto 0;
     height: 500px;
-    width: 89%;
+    max-width: 100%;
 }
 
 .locations-items {
@@ -171,14 +171,27 @@ h4 {
     margin: 20px;
 }
 
-/* Responsive styles for tLocation section */
+/* Responsive styles */
+
 
 @media screen and (max-width: 768px) {
+    nav ul a {
+        font-size: 1.24rem;
+    }
+
+     .mission-text {
+        font-size: 1rem;
+    }
+
+    .featured-tea, .tea-item-text, footer {
+        font-size: 1.1rem;
+    }
+
     .locations {
+        font-size: 1.2rem;
         width: 90%;
         margin: 50px auto;
         height: auto;
-        padding: 10px;
     }
 
     .locations-items {
@@ -191,7 +204,12 @@ h4 {
     }
 }
 
+
+
 @media screen and (max-width: 480px) {
+    header {
+        
+    }
     .locations {
         padding: 10px;
     }
@@ -201,5 +219,3 @@ h4 {
         font-size: 1.4rem;
     }
 }
-
-
